# code-review-agent

./: .env.example  .gitignore  README.md  TODO.md  code review.markdown  hello world.java  java3.java  pyproject.toml  test.java  test1.java
.github/workflows/: code_review.yml
src/: __init__.py  aggregator.py  architect.py  formatter.py  github_client.py  llm_client.py  models.py  pipeline.py  preprocess.py  skill_loader.py
src/agents/: __init__.py  base.py  bug_hunter.py  quality.py  security.py
team-rules-skill/: default.md
tests/: __init__.py  test_agent_review.py  test_agents.py  test_aggregator.py  test_architect.py  test_bug_hunter.py  test_formatter.py  test_github_client.py  test_integration.py  test_llm_client.py  test_pipeline.py  test_preprocess.py  test_skill_loader.py
